--- a/html/index.html
+++ b/html/index.html
@@ -35,11 +35,13 @@
               <img src="/img/Vector.svg" alt="logo" id="Vector"  />
             </div>
             <ul class="nav_bar">
-              <li><a href="#" class="nav_bar_link">О нас</a></li>
-              <li><a href="#" class="nav_bar_link">Проекты</a></li>
-              <li><a href="#" class="nav_bar_link">Этапы</a></li>
-              <li><a href="#" class="nav_bar_link">Отзывы</a></li>
-              <li><a href="#" class="nav_bar_link">Контакты</a></li>
+              <li><a href="#MINE" class="nav_bar_link">О нас</a></li>
+              <li><a href="#CONSTRUCRION" class="nav_bar_link">Проекты</a></li>
+              <li><a href="#JOBS" class="nav_bar_link">Этапы</a></li>
+              <li><a href="#FOOTER" class="nav_bar_link">Контакты</a></li>
+              <li>
+                <a href="/html/login.html" class="nav_bar_link">Регистрация</a>
+              </li>
               <li>
                 <a href="/html/registr.html" class="nav_bar_link">Вход</a>
               </li>
@@ -79,7 +81,7 @@
     <main>
       <section class="by_main">
         <div class="container">
-          <h1 class="New_Promo">О нас</h1>
+          <h1 class="New_Promo" id="MINE">О нас</h1>
           <p class="New_promo_text">
             Также как перспективное планирование создаёт необходимость включения
             в производственный план целого ряда внеочередных мероприятий <br />
@@ -130,7 +132,7 @@
           <p class="mobile_construct_paragraph">Качество жизни, они забывают, что сплочённость команды профессионалов представляет собой интересный эксперимент проверки прогресса профессионального сообщества</p>
         </div>
       </section>
-      <section class="construct_new_obj">
+      <section class="construct_new_obj" id="CONSTRUCRION">
         <div class="container">
           <div class="wrap">
             <div class="lux_cards">
@@ -182,7 +184,7 @@
           </div>
         </div>
       </section>
-      <section class="jobs">
+      <section class="jobs" id="JOBS">
         <div class="container">
           <h1 class="jobs_of_mine">Как мы работаем</h1>
           <div class="Stepik">
@@ -297,7 +299,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer id="FOOTER">
       <div class="container">
         <div class="footer">
           <div class="left_footer">
