--- a/html/index.html
+++ b/html/index.html
@@ -45,14 +45,33 @@
               <li>
                 <a href="/html/registr.html" class="nav_bar_link">Вход</a>
               </li>
-              <li>
-                <a href="#" class="nav_bar_link"
-                  ><img src="/img/search.svg  " alt=""
+              <li id="last_li">
+                <button class="FISTING_DEN_ASS">
+                <a href="#" class="nav_bar_link"><img src="/img/search.svg" alt="nav"
                 /></a>
+              </button>
               </li>
             </ul>
+            <div class="nones">
+            <div class="modal_finder">
+              <div class="input_modal_task">
+              <input placeholder="Что будем искать?" class="input_finder">
+            </div>
+            <button class="gold_finds_button">
+              <svg class="gold_find" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                <rect width="7.56126" height="1.89031" transform="matrix(0.713342 0.700816 -0.713342 0.700816 18.6062 17.3762)" fill="#FF9900"/>
+                <path d="M20.9303 10.7726C20.9303 16.1533 16.4855 20.5452 10.9652 20.5452C5.44478 20.5452 1 16.1533 1 10.7726C1 5.39198 5.44478 1 10.9652 1C16.4855 1 20.9303 5.39198 20.9303 10.7726Z" stroke="#FF9900" stroke-width="2"/>
+              </svg>
+            </button>
+              <svg class="close_modal" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                <rect x="8.95386" y="7.30444" width="11.6645" height="2.33291" transform="rotate(45 8.95386 7.30444)" fill="#CACACA"/>
+                <rect x="7.3042" y="15.5525" width="11.6645" height="2.33291" transform="rotate(-45 7.3042 15.5525)" fill="#CACACA"/>
+                <circle cx="12" cy="12" r="11" stroke="#CACACA" stroke-width="2"/>
+              </svg>
+            </div>
+          </div>
             <div class="finder_width">
-              <a href="#" class="nav_bar_link"
+              <a href="#" class="nav_bar_link" class = "Finders" id="findings"
                 ><img src="/img/search.svg  " alt=""
               /></a>
             </div>
@@ -191,29 +210,29 @@
             <div class="left_section">
               <ul class="step">
                 <li class="step_li">
-                  <button class="step_button">
-                    <a href="" class="step_link"> Шаг 1</a>
-                  </button>
+                  
+                    <button class="step_link"  id="step1"> Шаг 1</button>
+
                 </li>
                 <li class="step_li">
-                  <button class="step_button">
-                    <a href="" class="step_link"> Шаг 2</a>
-                  </button>
+                  
+                    <button class="step_link"  id="step2"> Шаг 2</button>
+
                 </li>
                 <li class="step_li">
-                  <button class="step_button">
-                    <a href="" class="step_link"> Шаг 3</a>
-                  </button>
+
+                    <button class="step_link" id="step3"> Шаг 3</button>
+
                 </li>
                 <li class="step_li">
-                  <button class="step_button">
-                    <a href="" class="step_link"> Шаг 4 </a>
-                  </button>
+
+                    <button class="step_link" id="step4"> Шаг 4 </button>
+
                 </li>
               </ul>
               <div class="step_text">
-                <h1 class="consultation_jobs">Проводим консультацию</h1>
-                <p class="consultation_block_p">
+                <h1 class="consultation_jobs" id="PROVODIMENZ">Проводим консультацию</h1>
+                <p class="consultation_block_p" id="PROVODIMENZPS">
                   Влечёт за собой процесс внедрения и модернизации приоритизации
                   разума над эмоциями. В рамках спецификации современных
                   стандартов, некоторые особенности внутренней политики будут
@@ -244,6 +263,7 @@
                 width="620px"
                 height="460px"
                 alt="treaty"
+                class="img_steping"
               />
             </div>
           </div>
@@ -255,10 +275,10 @@
                 Как мы работаем
             </h1>
                 <ul class="mobile_ul">
-                  <li class="mobile_li"><a href="#" class="mobile_link">1 шаг</a></li>
-                  <li class="mobile_li"><a href="#" class="mobile_link">2 шаг</a></li>
-                  <li class="mobile_li"><a href="#" class="mobile_link">3 шаг</a></li>
-                  <li class="mobile_li"><a href="#" class="mobile_link">4 шаг</a></li>
+                  <li class="mobile_li"><button class="mobile_link">1 шаг</button></li>
+                  <li class="mobile_li"><button class="mobile_link">2 шаг</button></li>
+                  <li class="mobile_li"><button class="mobile_link">3 шаг</button></li>
+                  <li class="mobile_li"><button class="mobile_link">4 шаг</button></li>
                 </ul>
                 <img src="/img/treaty.png" width="290px" alt="">
                 <h1 class="mobile_consultation">Проводим консультацию</h1>
@@ -536,6 +556,7 @@
         </div>
       </div>
     </footer>
+    <script src="/js/script.js"></script>
   </body>
 </html>
   
