--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,25 @@
   <body>
     <header>
       <div class="costomize_nav">
+        <div class="burger_modal">
+          <ul class="burger_dop">
+            <li class="burger_close"><svg xmlns="http://www.w3.org/2000/svg" width="23" height="25" viewBox="0 0 23 25" fill="none">
+              <path d="M2.09082 0.03125L22.9999 22.0294L20.909 24.2292L-8.73579e-05 2.23106L2.09082 0.03125Z" fill="#333333"/>
+              <path d="M0 22.0295L20.9091 0.0314368L23 2.23125L2.09091 24.2294L0 22.0295Z" fill="#333333"/>
+            </svg></li>
+            <li><a href="#MINE"  class="nav_bar_link">О нас</a></li>
+            <li><a href="#CONSTRUCRION" class="nav_bar_link">Проекты</a></li>
+            <li><a href="#JOBS" class="nav_bar_link">Этапы</a></li>
+            <li><a href="#FOOTER" class="nav_bar_link">Контакты</a></li>
+            <li>
+              <a href="/html/login.html" class="nav_bar_link">Регистрация</a>
+            </li>
+            <li>
+              <a href="/html/registr.html" class="nav_bar_link">Вход</a>
+            </li>
+
+          </ul>
+        </div>
         <div class="container">
           <nav>
             <svg
@@ -52,6 +71,7 @@
               </button>
               </li>
             </ul>
+
             <div class="nones">
             <div class="modal_finder">
               <div class="input_modal_task">
@@ -80,7 +100,7 @@
       </div>
       <div class="container" id="container-part">
         <section class="promo_Imgure">
-          <div class="project">
+          <div class="project" id="animated">
             <h1 class="titel">
               Проектные решения <br />
               любой сложности
