--- a/html/index.html
+++ b/html/index.html
@@ -54,14 +54,14 @@
               <img src="/img/Vector.svg" alt="logo" id="Vector"  />
             </div>
             <ul class="nav_bar">
-              <li><a href="#MINE" class="nav_bar_link">О нас</a></li>
-              <li><a href="#CONSTRUCRION" class="nav_bar_link">Проекты</a></li>
-              <li><a href="#JOBS" class="nav_bar_link">Этапы</a></li>
-              <li><a href="#FOOTER" class="nav_bar_link">Контакты</a></li>
-              <li>
+              <li class="NIOS"><a href="#MINE" class="nav_bar_link">О нас</a></li>
+              <li class="NIOS"><a href="#CONSTRUCRION" class="nav_bar_link">Проекты</a></li>
+              <li class="NIOS"><a href="#JOBS" class="nav_bar_link">Этапы</a></li>
+              <li class="NIOS"><a href="#FOOTER" class="nav_bar_link">Контакты</a></li>
+              <li class="NIOS">
                 <a href="/html/login.html" class="nav_bar_link">Регистрация</a>
-              </li>
-              <li>
+              </li >
+              <li class="NIOS">
                 <a href="/html/registr.html" class="nav_bar_link">Вход</a>
               </li>
               <li id="last_li">
@@ -91,12 +91,14 @@
             </div>
           </div>
             <div class="finder_width">
+              <button id="mob_find">
               <a href="#" class="nav_bar_link" class = "Finders" id="findings"
                 ><img src="/img/search.svg  " alt=""
-              /></a>
+              /></a></button>
             </div>
           </nav>
         </div>
+
       </div>
       <div class="container" id="container-part">
         <section class="promo_Imgure">
@@ -337,6 +339,24 @@
           </form>
         </div>
       </section>
+      <section>
+        <div class="container">
+          <h1 class="New_Promo">Отзывы</h1>
+          <div class="helpor">
+
+            <input type="text" placeholder="Напишите">
+            <button class="helpini_promo">Добавить отзыв</button>
+          </div>
+
+            <div class="ussr">
+              <p class="market">РЕБЯТА ВАЩЕ КРАСАВЦЫ</p>
+              
+          </div>
+          <div class="helpinis">
+            
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer id="FOOTER">
@@ -470,24 +490,25 @@
                 <a href="#" class="link_footer">О нас</a>
               </li>
               <li class="li_footer">
-                <a href="#" class="link_footer">Проекты</a>
+                <a href="" class="link_footer">Проекты</a>
               </li>
               <li class="li_footer">
-                <a href="#" class="link_footer">Отзывы</a>
+                <a href="" class="link_footer">Отзывы</a>
               </li>
               <li class="li_footer">
-                <a href="#" class="link_footer">Договор офёртов</a>
+                <a href="./dogovor..html" class="link_footer">Договор офёртов</a>
               </li>
               <li class="li_footer">
-                <a href="#" class="link_footer">Договор подряда</a>
+                <a href="./dogovor..html" class="link_footer">Договор подряда</a>
               </li>
               <li class="li_footer">
-                <a href="#" class="link_footer">Конфиденциальность</a>
+                <a href="./dogovor..html" class="link_footer">Конфиденциальность</a>
               </li>
               <li class="li_footer">
-                <a href="#" class="link_footer">Партнёрское соглашение</a>
+                <a href="./dogovor..html" class="link_footer">Партнёрское соглашение</a>
               </li>
             </ul>
+
             <ul class="tg_films">
               <li class="th_link_S">
                 <a href="#" class="th_link"
